# LLMAACTestBed

./: .env.example  .gitignore  ContextAACNotebook.ipynb  Hypothesis.md  README.md  aac_experiment_results.csv  dave_context.json  dwayne_context.json  pyproject.toml  requirements.txt  run_speech_ablation.py  run_strict_aac.py  run_synthesis_test.py  test.py  transcript_data.json  transcript_data_2.json  unprocessed-conversation.txt
ChatHistoryEvaluation/: ChatHistoryEvaluation.ipynb  ContextFilterSweep.ipynb  Demo.ipynb  README.md  config.yaml  example.py  requirements.txt  run_evaluation.py  simple_test.py  sweep_wrapper.py  test_import.py  visualize_sweep_results.py
ChatHistoryEvaluation/utils/: evaluation_utils.py
data/synthetic/chat_profile_mappings/: README.md
data/synthetic/phase4/: DwayneKeyWords.tsv
data/synthetic/social_graphs/: README.md
data/synthetic/transcripts/: transcript_data.json  transcript_data_2.json  transcript_data_2_improved.json  transcript_data_2_improved_expanded.json  transcript_vague.json
docs/: LLM_PROVIDERS.md
experiments/phase1_chat_history/: README.md  example.py  run_evaluation.py  run_evaluation_legacy.py  run_phase1.py
experiments/phase1_chat_history/configs/: config.yaml
experiments/phase1_chat_history/evaluation/: chat_evaluator.py  run_evaluation.py  visualize_sweep_results.py
experiments/phase1_chat_history/results_summary/: report.md
experiments/phase2_context_aware/: README.md  plot_results.py  run_context_experiments.py  run_speech_ablation.py  run_strict_aac.py  run_synthesis_test.py
experiments/phase3_combined/: README.md  run_phase3.py
experiments/phase3_combined/configs/: profile_enhanced.yaml
experiments/phase3_combined/experiments/: profile_enhanced.py  social_context.py
experiments/phase4_keyword_creation/: README.md  README_USAGE.md  run_experiment.py  run_simple.py
experiments/phase4_keyword_creation/evaluation/: __init__.py  context_builder.py  keyword_evaluator.py  results_analyzer.py
experiments/phase5_memory_rag_vs_cognee/: README.md  generate_expanded_transcripts.py  normalize_transcripts.py  run_memory_experiment.py
lib/: __init__.py
lib/context/: __init__.py  builders.py  filters.py  profiles.py
lib/data/: __init__.py  loaders.py  processors.py  splitters.py
lib/evaluation/: __init__.py  base_evaluator.py  chat_history_evaluator.py  metrics.py  scorers.py  visualizers.py
lib/llm_clients/: __init__.py  base.py  factory.py  gemini_client.py  judge.py  openai_client.py
lib/reporting/: __init__.py  aggregator.py  paper_formatter.py  report_generator.py
lib/utils/: __init__.py  config.py  data_utils.py  env.py  file_utils.py  logger_setup.py
scripts/: convert_baton_to_conversations.py  generate_results_report.py
